# cornucopia-lib

./: CMakeLists.txt  CornucopiaDescription.md  ProjectHome.md  README.txt  ToDo.md
Cornucopia/: Algorithm.cpp  Algorithm.h  AngleUtils.h  Arc.cpp  Arc.h  CMakeLists.txt  Clothoid.cpp  Clothoid.h  ClothoidProjector.cpp  Combiner.cpp  Combiner.h  CornerDetector.cpp  CornerDetector.h  Cornucopia.h  Curve.h  CurvePrimitive.cpp  CurvePrimitive.h  Debugging.cpp  Debugging.h  ErrorComputer.cpp  ErrorComputer.h  Fitter.cpp  Fitter.h  Fresnel.cpp  Fresnel.h  GraphConstructor.cpp  GraphConstructor.h  Line.cpp  Line.h  Oversketcher.cpp  Oversketcher.h  Parameters.cpp  Parameters.h  PathFinder.cpp  PathFinder.h  Polyline.cpp  Polyline.h  Preprocessing.cpp  Preprocessing.h  PrimitiveFitUtils.cpp  (+21 more)
DemoUI/: AlgorithmChoiceWidget.cpp  AlgorithmChoiceWidget.h  CMakeLists.txt  DebugWindow.cpp  DebugWindow.h  DebugWindow.ui  DebuggingImpl.cpp  DebuggingImpl.h  DemoUIWindow.cpp  DemoUIWindow.h  DemoUIWindow.ui  Document.cpp  Document.h  GroupSelWidget.cpp  GroupSelWidget.h  MainView.cpp  MainView.h  OneParamWidget.cpp  OneParamWidget.h  OneParamWidget.ui  ParamWidget.cpp  ParamWidget.h  ParamWidget.ui  SceneItem.cpp  SceneItem.h  ScrollScene.cpp  ScrollScene.h  ScrollView.cpp  ScrollView.h  main.cpp  test.cpp
Test/: CMakeLists.txt  CurveDerivativesTest.cpp  CurveProjectTest.cpp  EndToEndTest.cpp  FresnelTest.cpp  PolylineTest.cpp  PrimitiveFitterTest.cpp  PrimitiveSeqTest.cpp  Test.cpp  Test.h  TestUtils.h
Tools/: AddTool.cpp  AddTool.h  AddToolDialog.ui  CMakeLists.txt  FormatTool.cpp  FormatTool.h  RegressionTool.cpp  RegressionTool.h  Tool.cpp  Tool.h  ToolsWindow.cpp  ToolsWindow.h  config.h.cmake  cpp_template.txt  fileHeader.txt  h_template.txt  main.cpp  test_template.txt
